plugins/mermaid/plugin/src/test/resources/intention/declarations/checkout.mermaid
gitgraph
  checkout <error descr="Unresolved branch">master</error>